polished main leaderboard view and added title at top. Minor changes

--- a/src/item-component/Item.css
+++ b/src/item-component/Item.css
@@ -1,10 +1,13 @@
 .pr-container {
   display:flex;
   padding: 5px;
+  border: lightgrey;
+  border-radius: 0.5em;
+  box-shadow: 1.5px 1px #888888;
+  overflow: hidden;
 }
 
 .pin-container {
-  background-color:red;
   display: flex;
   flex:0.25;
 }
