--- a/client/src/item-component/Item.css
+++ b/client/src/item-component/Item.css
@@ -4,6 +4,9 @@
   border-radius: 0.5em;
   box-shadow: 1.25px 1px 1px 1px #a0a0a0;
   overflow: hidden;
+  min-width: 1000px;
+  margin: 15px;
+  position: relative;
 }
 
 .pin-container {
@@ -12,7 +15,6 @@
 }
 
 .item-body-container{
-  background-color: seashell;
   display: flex;
   flex-direction: column;
   flex:6;
@@ -21,36 +23,25 @@
 .title-container {
   font-weight: 700;
   padding: 8px;
+  font-size: larger;
+  background-color: lightgrey;
 }
 
 .detail-container {
   display: flex;
+  align-content: center;
+  align-items: center;
+  font-size: large;
 }
 
 .information-container {
-  background-color:pink;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-
-.information-container > div {
-  display: flex;
-  flex-basis: calc(50% - 20px);
-  justify-content: right;
-  flex-direction: row;
-  padding: 8px;
-  }
-
-.information-container > div > div {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
+  flex: 0 32%;
+  height: 100px;
+  margin-bottom: 2%;
 }
 
 .detail-title-container {
-  background-color:white;
-  padding: 4px;
+  padding: 8px;
   font-weight: 700;
 }
 
@@ -61,11 +52,28 @@
 .gitInfo-container {
   background-color:white;
   display: flex;
-  padding: 4px;
+  padding: 8px;
+  display: flex;
+  align-items: center;
 }
 
 .actions-container {
-  background-color:purple;
   display: flex;
   padding: 4px;
+  position: absolute;
+  align-self: flex-end;
+  z-index: 10;
+}
+
+.button{
+  min-width: 15px;
+  min-height: 15px;
+  margin: 4px;
+  border-radius: 8px;
+  background-color: lightgrey;
+}
+
+.icon{
+  min-width: 25px;
+  min-height: 25px;
 }
