placed buttons in the right place. added router. added login page (non-working)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,9 @@
 body {
   margin: 0;
-  padding: 2px;
   font-family: 'Oxygen';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 
 code {
