--- a/client/src/login-component/Login.css
+++ b/client/src/login-component/Login.css
@@ -2,12 +2,22 @@
   position: absolute;
   left: 50%;
   top: 50%;
+  padding: 8px;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
 }
 
+.form-container{
+  padding: 8px;
+  margin: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
 
 .input-container {
   width: 300px;
@@ -17,6 +27,7 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 7px 10px 5px 0px rgba(0,0,0,0.34);
+  margin: 4px;
 }
 
 .input-button{
