--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: 1px solid red;
+}
+
 body {
   margin: 0;
   font-family: 'Oxygen';
