feat: added avatars for reviewers, added new positioning for buttons

--- a/client/src/Avatar/Avatar.css
+++ b/client/src/Avatar/Avatar.css
@@ -6,3 +6,9 @@
 .Avatar img{
   max-width: 100%;
 }
+
+/* .overlayingInline{
+  margin-left: -10px;
+  position: relative;
+  border: 1px solid #ffffff;
+} */
