--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,15 @@ body {
   color: #3c3c3c;
 }
 
+a, a:link, a:visited, a:hover, a:active{
+  text-decoration: none !important;
+  color:inherit}
+
+.entry-content a {
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
 code {
   font-family: 'Oxygen', ;
 }
