feat:added new favicon

--- a/client/src/PrDetails/PrDetails.css
+++ b/client/src/PrDetails/PrDetails.css
@@ -2,7 +2,7 @@
 	background-color: white;
 	margin-bottom: 8px;
 	border-radius: 8px;
-	padding: 0 8px;
+	padding: 4px 8px 8px 4px;
 	display: flex;
 }
 
