--- a/client/src/PrPreview/PrPreview.css
+++ b/client/src/PrPreview/PrPreview.css
@@ -19,26 +19,35 @@
 .PrPreview-header-title {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
 	padding: 8px;
 	flex: 1 1 0;
 }
 
+.PrPreview-header-repo {
+	font-size: 12px;
+	margin-bottom: 4px;
+}
+
+.PrPreview-header-name {
+	font-size: 14px;
+	font-weight: bold;
+}
+
 .PrPreview-header-details {
 	display: flex;
-	align-items: center;
-	justify-content: center;
+	align-self: start;
+	margin-top: 8px;
 }
 
 .PrPreview-header-actions {
 	position: absolute;
 	right: 0;
-	bottom: -20px;
+	bottom: -30px;
 }
 
 .PrPreview-header-button {
 	display: none;
+	cursor: pointer;
 }
 
 .PrPreview:hover .PrPreview-header-button {
