feat: added authors filter logic. Needs refactor for managing filter hyerarchy

--- a/client/src/Components/Dashboard/Dashboard.css
+++ b/client/src/Components/Dashboard/Dashboard.css
@@ -15,6 +15,13 @@
 	align-self: center;
 }
 
+.Dashboard-navBar {
+	width: 100%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-evenly;
+}
+
 .Dashboard-filter {
 	font-size: 14px;
 	max-width: 600px;
