--- a/client/src/Components/Dashboard/Dashboard.css
+++ b/client/src/Components/Dashboard/Dashboard.css
@@ -1,5 +1,9 @@
 .Dashboard {
 	display: flex;
+}
+
+.Dashboard-content {
+	display: flex;
 	flex-direction: column;
 	align-items: stretch;
 	justify-content: center;
@@ -17,8 +21,11 @@
 
 .Dashboard-filter {
 	font-size: 14px;
-	max-width: 600px;
-	min-width: 300px;
 	margin-bottom: 16px;
 	align-self: center;
+}
+
+.Dashboard-sidebar {
+	display: flex;
+	flex: 1;
 }
