Added new filter in sidebar. Commiting due to hotfix in branch master

--- a/client/src/Components/Dashboard/Dashboard.css
+++ b/client/src/Components/Dashboard/Dashboard.css
@@ -19,6 +19,13 @@
 	align-self: center;
 }
 
+.Dashboard-navBar {
+	width: 100%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-evenly;
+}
+
 .Dashboard-filter {
 	font-size: 14px;
 	margin-bottom: 16px;
