fix: fixed Status to render all prs

--- a/client/src/Components/Status/Status.css
+++ b/client/src/Components/Status/Status.css
@@ -21,3 +21,15 @@
 .Status-avatar--changes {
 	border: 2px solid #cb2431;
 }
+
+.Status-avatar--changes {
+	border: 2px solid #cb2431;
+}
+
+.Status-avatar--pending {
+	border: 2px solid #fffbdd;
+}
+
+.Status-avatar--dismissed {
+	border: 2px solid #d64292;
+}
