feat: added authors filter

--- a/client/src/Components/Feedback/Feedback.css
+++ b/client/src/Components/Feedback/Feedback.css
@@ -5,6 +5,10 @@
 	justify-self: center;
 }
 
+.Feedback-button {
+	background-color: #f3f2f2;
+}
+
 span.nobreak {
 	overflow: hidden;
 	text-overflow: ellipsis;
