--- a/client/src/Components/SidebarContent/SidebarContent.css
+++ b/client/src/Components/SidebarContent/SidebarContent.css
@@ -3,8 +3,7 @@
 	flex-direction: column;
 	width: 400px;
 	height: 100vh;
-	padding: 16px;
 	overflow: hidden;
-	padding-top: 24px;
+	padding: 67px 16px 16px;
 	justify-content: flex-start;
 }
