--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -3,7 +3,6 @@
 	flex-direction: column;
 }
 .Sidebar-button {
-	margin: 5px;
 	position: fixed;
-	background-color: #f3f2f2;
+	background-color: #ffffff;
 }
