feat: added draft badge

--- a/client/src/Components/Badge/Badge.css
+++ b/client/src/Components/Badge/Badge.css
@@ -20,6 +20,12 @@
 	background-color: #cb2431;
 }
 
+.Badge--draft {
+	background-color: gray;
+	text-align: justify;
+	margin-top: 2px;
+}
+
 .emoji {
 	opacity: 1;
 }
