--- a/client/src/Components/Checkbox/Checkbox.css
+++ b/client/src/Components/Checkbox/Checkbox.css
@@ -1,10 +1,11 @@
 .Checkbox {
-	width: 12px;
-	height: 12px;
-	padding: 12px;
+	display: flex;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
 }
 
-.input-container {
+.Checkbox-input {
 	display: flex;
 	padding: 12px 8px;
 	justify-content: center;
