--- a/client/src/Components/PrDetails/PrDetails.css
+++ b/client/src/Components/PrDetails/PrDetails.css
@@ -6,9 +6,11 @@
 	padding: 4px 8px 8px 4px;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 }
 
 .PrDetails-date {
 	display: inline-block;
-	font-size: 12px;
+	font-size: 8px;
+	margin-bottom: -36px;
 }
