fix: When images can't be rendered now we'll display the username

--- a/client/src/Components/Avatar/Avatar.css
+++ b/client/src/Components/Avatar/Avatar.css
@@ -1,8 +1,12 @@
 .Avatar {
-	border-radius: 4px;
-	overflow: hidden;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .Avatar img {
-	max-width: 100%;
+  max-width: 100%;
+}
+
+.Avatar-error {
+  font-size: 10px;
 }
